--- a/IrisDataVisualizationAssignmtKish.ipynb
+++ b/IrisDataVisualizationAssignmtKish.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfPX6tKPAvCErpnhfTxyz3",
+      "authorship_tag": "ABX9TyPdVk8vZNfBlvZX6CKc70Td",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1039,6 +1039,19 @@
       ],
       "metadata": {
         "id": "tv0-BGIC97yR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#*Features like petal length and petal width provide the strongest separation among species, with relatively little overlap.\n",
+        "\n",
+        "#*Combining multiple measurements in scatter plots or pairwise relationships reveals clear groupings, supporting the use of these features in classification tasks.\n",
+        "\n",
+        "#*Overall, sepal and petal dimensions are highly informative and sufficient to differentiate the three Iris species with good accuracy."
+      ],
+      "metadata": {
+        "id": "Dg6VKcWIAKkE"
       }
     }
   ]
